--- a/demo/arm/mofei/index.css
+++ b/demo/arm/mofei/index.css
@@ -17,10 +17,11 @@ body {
     border: 1px solid #666;
     position: absolute;
     left: 10px;
-    top: 10%;
+    top: 130px;
     min-height: 200px;
     background: rgba(0, 0, 0, 0.3);
     color: #ccc;
+    width:290px;
 }
 
 .pan a {
@@ -55,6 +56,7 @@ body {
 
 .panBlock {
     font-size: 14px;
+    border-bottom: 1px dotted #333
 }
 
 .panBlock:hover {
@@ -63,7 +65,7 @@ body {
 
 .panBlock:nth-child(1) {
     color: #fff;
-    padding-top: 15px;
+    /*padding-top: 15px;*/
 }
 
 .panBlock span {
@@ -90,10 +92,40 @@ body {
     display: inline-block;
     text-align: center;
     width: 80px;
+    font-weight: bold;
+    /*color: #e90071;*/
 }
 
 .panBlock em {
-	font-style: normal;
+	text-decoration: underline;
+    font-style: normal;
     text-transform: none;
     cursor: pointer;
+    color:#64daf1;
 }
+
+.panSearch input {
+	position: absolute;
+    top: 100px;
+    left: 10px;
+    width: 290px;
+    text-align: center;
+    background: rgba(255, 255, 255, 0.3);
+    height: 25px;
+    background: none;
+    padding: 0;
+    margin: 0;
+    border: 1px solid #666;
+    color: #a7e808;
+    outline: none;
+}
+
+.panSearch input:-moz-placeholder {
+    color: #a7e808;
+}
+
+.panSearch input::-webkit-input-placeholder {
+    color: #a7e808;
+}
+
+.showAraeTips { font-size:14px; padding:5px;}
