--- a/demo/arm/mofei/index.css
+++ b/demo/arm/mofei/index.css
@@ -16,12 +16,14 @@ body {
 .pan {
     border: 1px solid #666;
     position: absolute;
-    left: 10px;
+    left: -500px;
     top: 130px;
     min-height: 200px;
     background: rgba(0, 0, 0, 0.3);
     color: #ccc;
     width: 290px;
+    -webkit-transition: all 0.5s ease-in;
+    transition: all 0.5s ease-in;
 }
 
 .pan a {
@@ -107,7 +109,7 @@ body {
 .panSearch input {
     position: absolute;
     top: 100px;
-    left: 10px;
+    left: -400px;
     width: 290px;
     text-align: center;
     background: rgba(255, 255, 255, 0.3);
@@ -118,6 +120,8 @@ body {
     border: 1px solid #666;
     color: #a7e808;
     outline: none;
+    -webkit-transition: all 0.3s ease-in;
+    transition: all 0.3s ease-in;
 }
 
 .panSearch input:-moz-placeholder {
@@ -165,4 +169,16 @@ body {
     font-size: 14px;
     color: #999;
     margin-top: 10px;
+}
+
+.bottomTips {
+    position: absolute;
+    bottom: -500px;
+    left: 10px;
+    right: 10px;
+    color: #e6df6d;
+    line-height: 1.6em;
+    font-size: 12px;
+     -webkit-transition: all 0.8s ease-in;
+    transition: all 0.8s ease-in;
 }
