--- a/demo/oneone/mofei/index.css
+++ b/demo/oneone/mofei/index.css
@@ -192,7 +192,8 @@ body {
     bottom: 0;
     right: 0;
     z-index: 1000;
-    background: rgba(0, 0, 0, 0.5);
+    /*background: rgba(0, 0, 0, 0.5);*/
+    
     opacity: 0;
     text-align: center;
     color: #fff;
@@ -238,17 +239,35 @@ body {
 }
 
 .cover .title {
-    height: 140px;
-    line-height: 140px;
-    width: 100%;
-    margin-top: -65px;
+    background: rgba(0, 0, 0, 0.3);
+    padding: 10px;
     position: absolute;
-    font-size: 0px;
-    top: 50%;
-    -webkit-transform: rotate(-10deg);
-    -webkit-transition: all 0.2s ease-in;
-    transition: all 0.2s ease-in;
-    text-shadow: 1px 1px 8px #87CEEB;
-    white-space: nowrap;
-    /*font-size: 120px;*/
+    bottom: 50%;
+    right: auto;
+    left: -200%;
+    right: -100%;
+    margin-bottom: -20px;
+    width: 100%;
+    line-height: 40px;
+    text-shadow: 0 0 20px #0AAFE6, 0 0 20px rgba(10, 175, 230, 0);
+    font-size: 40px;
+    text-align: center;
+    height: 40px;
+    -webkit-transition: all 0.6s ease-in;
+    transition: all 0.6s ease-in;
+}
+
+.cover .subtitle {
+    text-shadow: 0 0 20px #0AAFE6, 0 0 20px rgba(10, 175, 230, 0);
+    display: none;
+    opacity: 0;
+    -webkit-transition: all 0.3s ease-in;
+    transition: all 0.3s ease-in;
+    font-size: 14px;
+    line-height: 1.6em;
+    text-align: left;
+}
+
+.cover .title span {
+    transform: rotateZ(1deg);
 }
